--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
+url: http://lucy-orbach.github.io
 title: Keep Calm and Code On
 subtitle: a visualization blog for new hackers.
 author: Lucy J Orbach
